# RAG

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_documents_and_chunks.py  0002_add_chunk_embedded_at.py  0003_conversations_and_messages.py
backend/app/: main.py
backend/app/api/: chat.py  documents.py  health.py  metrics.py  retrieval.py
backend/app/core/: config.py  logging.py  metrics.py
backend/app/db/: qdrant.py  redis.py  session.py
backend/app/models/: __init__.py  base.py  chunk.py  conversation.py  document.py
backend/app/schemas/: chat.py  document.py  health.py  retrieval.py
backend/app/services/: cache.py  chat.py  chunking.py  health.py  indexing.py  ingestion.py  observability.py  storage.py
backend/app/services/embeddings/: __init__.py  base.py  openai_provider.py
backend/app/services/llm/: __init__.py  anthropic_provider.py  base.py
backend/app/services/parsing/: __init__.py  base.py  docx_parser.py  html_parser.py  markdown_parser.py  pdf_parser.py
backend/app/services/retrieval/: __init__.py  cohere_reranker.py  cross_encoder.py  service.py
backend/tests/: test_cache.py  test_chat.py  test_chunking.py  test_documents_api.py  test_health.py  test_indexing.py  test_metrics.py  test_parsing.py  test_retrieval.py
backend/tests/fixtures/: generate_fixtures.py  sample.docx  sample.html  sample.md
(+43 files in other folders)
