[project]
name = "rag-backend"
version = "0.1.0"
description = "RAG backend: ingestion, hybrid retrieval, and cited generation."
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle (E/W), pyflakes (F), isort (I), flake8-bugbear (B), pyupgrade (UP).
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
